cabal-version:      3.0
name:               pomnetic
version:            0.1.0.0
synopsis:           Mikko's AI chaining thing
homepage:           https://monoid.xyz/
license:            ISC
license-file:       LICENSE
author:             Mikko Juola
maintainer:         mikko.juola@iki.fi
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -fno-warn-name-shadowing

library
    import:           warnings
    exposed-modules:  Pomnetic.Error
                      Pomnetic.Medium
                      Pomnetic.Safe
                      Pomnetic.Types
                      Pomnetic
    build-depends:    attoparsec
                     ,base >=4.9 && <5.0
                     ,clock
                     ,containers
                     ,mtl
                     ,primitive
                     ,regex-base
                     ,regex-tdfa
                     ,stm
                     ,text
                     ,vector
    hs-source-dirs:   src
    cxx-sources:      cbits/llama_glue.cc
    extra-libraries:  llama, stdc++
    -- llama wants Accelerate on macOS typically
    if os(darwin)
        frameworks:       Accelerate, CoreGraphics, Metal, MetalKit
    default-language: Haskell2010

executable pomnetic
    import:           warnings
    main-is:          Main.hs
    build-depends:
         async
        ,attoparsec
        ,attoparsec-aeson
        ,base >=4.9 && <5.0
        ,pomnetic
        ,text
        ,vector

    hs-source-dirs:   exe
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

test-suite pomnetic-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base
                     ,deepseq
                     ,pomnetic
                     ,tasty
                     ,tasty-hunit
                     ,tasty-quickcheck
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

