cabal-version:      3.0
name:               pomnetic
version:            0.1.0.0
synopsis:           Mikko's AI chaining thing
homepage:           https://monoid.xyz/
license:            ISC
license-file:       LICENSE
author:             Mikko Juola
maintainer:         mikko.juola@iki.fi
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -fno-warn-name-shadowing

library
    import:           warnings
    exposed-modules:  Pomnetic.Error
                      Pomnetic.HuggingFaceTokenizers
                      Pomnetic.PyHuggingFaceTokenizers
                      Pomnetic.Medium
                      Pomnetic.Safe
                      Pomnetic.Types
                      Pomnetic
    build-depends:    aeson
                     ,attoparsec
                     ,base >=4.9 && <5.0
                     ,bytestring
                     ,clock
                     ,containers
                     ,deepseq
                     ,mtl
                     ,neat-interpolation
                     ,primitive
                     ,process
                     ,regex-base
                     ,regex-tdfa
                     ,stm
                     ,temporary
                     ,text >=2.1.1
                     ,vector
                     ,vector-algorithms
    hs-source-dirs:   src
    cxx-sources:      cbits/llama_glue.cc
    extra-libraries:  llama, stdc++
    -- llama wants Accelerate on macOS typically
    if os(darwin)
        frameworks:       Accelerate, CoreGraphics, Metal, MetalKit
    default-language: Haskell2010

executable pomnetic-more-agents-is-all-you-need-experiment
    import:           warnings
    main-is:          Main.hs
    build-depends:
         async
        ,attoparsec
        ,attoparsec-aeson
        ,base >=4.9 && <5.0
        ,containers
        ,neat-interpolation
        ,pomnetic
        ,text
        ,vector

    hs-source-dirs:   exe
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

test-suite pomnetic-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base
                     ,deepseq
                     ,pomnetic
                     ,vector
                     ,tasty
                     ,tasty-hunit
                     ,tasty-quickcheck
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

